# FEBioChem

./: .gitignore  404.html  CMakeLists.txt  FEBioChem.sln  docker-compose.yml  index.html  mkdocs.yml
Documentation/: FEBioChem User Manual.docx  reaction diffusion.docx
Example/: Batch1.fsbatch  Logistic.fsm  Model1.fsm  custom1.feb  custom2.fsm  ex01.feb  ex02.feb  ex03.feb  ex04.feb  ex05.feb  ex06.feb  ex07.feb  ex08.feb  ex09.feb  ex10.feb  ex11.feb  ex12.feb  ex13.feb  ex14.feb  ex15.feb  ex16.feb  ex17.feb  ex18.feb  ex19.feb  ex20.feb  ex21.feb  ex22.feb  ex23.feb  ex24.feb  ex25.feb  ex26.feb  ex27.feb  ex28.feb  ex29.feb  ex30.feb  febio_osx.xml  febiochem - Copy.fsp  febiochem.fsp  febiochem_all_examples.ftm  febiochem_testdata_180515.txt  (+2 more)
FEBioChem/: FEBioChem.cpp  FEBioChem.vcxproj  FEBioChem.vcxproj.filters  FEBioChemAnalysis.cpp  FEBioChemAnalysis.h  FEBioChemLog.cpp  FEBioChemLog.h  FEBioChemPlot.cpp  FEBioChemPlot.h  FEChemCustomReaction.cpp  FEChemCustomReaction.h  FEChemCustomSpecies.cpp  FEChemCustomSpecies.h  FEChemDiffusiveSpecies.h  FEChemFickianSpecies.cpp  FEChemFickianSpecies.h  FEChemLogisticGrowthReaction.cpp  FEChemLogisticGrowthReaction.h  FEChemReactiveSpecies.cpp  FEChemReactiveSpecies.h  FEChemSolidBoundSpecies.cpp  FEChemSolidBoundSpecies.h  FEConcentrationBC.cpp  FEConcentrationBC.h  FEConcentrationFlux.cpp  FEConcentrationFlux.h  FEInitialConcentration.cpp  FEInitialConcentration.h  FEMassActionReaction.cpp  FEMassActionReaction.h  FEMichaelisMentenReaction.cpp  FEMichaelisMentenReaction.h  FENLReactionDiffusionSolver.cpp  FENLReactionDiffusionSolver.h  FEReactionDiffusionAdvectionSolver.cpp  FEReactionDiffusionAdvectionSolver.h  FEReactionDiffusionConvection.h  FEReactionDiffusionConvectionSolver.cpp  FEReactionDiffusionMaterial.cpp  FEReactionDiffusionMaterial.h  (+18 more)
VS2010/: FEBioChem.sln  FEBioChem.vcxproj  FEBioChem.vcxproj.filters
VS2013/: FEBioChem.sln  FEBioChem.vcxproj  FEBioChem.vcxproj.filters
Verify/: ch31.feb
docs/: FEBioChem User Manual.docx  febiochem_theory.md  febiochem_tutorial1.md  febiochem_user_manual.md  index.md  logistic_growth_reaction.md  mass_action_reaction.md  michaelis_menten_reaction.md  reaction diffusion.docx  using_the_febiochem_plugin.md
febiochem_theory/: index.html
febiochem_tutorial1/: index.html
febiochem_user_manual/: index.html
js/: mathjax_config.js
logistic_growth_reaction/: index.html
mass_action_reaction/: index.html
michaelis_menten_reaction/: index.html
search/: search_index.json
(+137 files in other folders)
